Initial commit for frontend

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
           <h1 class="other-pages-heading1 login-signup-heading">Login</h1>
           <div class="form-field">
             <div class="back-btn">&#8592;</div>
-            <a href="/frontend/index.html">
+            <a href="./index.html">
               <div class="close-btn">&#215;</div>
             </a>
             <form id="loginForm" onsubmit="event.preventDefault(); login();">
