--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMaster</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
@@ -30,7 +30,7 @@
           <h1 class="other-pages-heading1 login-signup-heading">Register</h1>
           <div class="form-field">
             <div class="back-btn">&#8592;</div>
-            <a href="/frontend/index.html">
+            <a href="./index.html">
               <div class="close-btn">&#215;</div>
             </a>
             <form id="signup">
