update the create account button on the landing page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </p>
           <div class="btn-login-signup">
             <a class="btn login" href="./login.html">Login</a>
-            <a class="btn signup" href="./signup.html"> Create an Account </a>
+            <a class="btn signup" href="./signup.html"> Create Account </a>
           </div>
         </div>
         <div class="right-section">
