--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMaster</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/icons/favicon_32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/icons/favicon_16x16.png"
+      sizes="16x16"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
