--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       href="./images/icons/favicon_32x32.png"
       sizes="32x32"
     />
-    <link
+    <!-- <link
       rel="icon"
       type="image/png"
       href="./images/icons/favicon_16x16.png"
       sizes="16x16"
-    />
+    /> -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
