--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -1,3 +1,5 @@
+<!-- ./frontend/user-dashboard.html -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -77,7 +79,7 @@
                     Filter by Due Date
                   </button>
                 </div>
-                <div  class="completed-div-section">
+                <div class="completed-div-section">
                   <button type="button" id="show-completed-tasks">
                     Show Completed Tasks
                   </button>
