--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -17,6 +17,13 @@
   </head>
   <body>
     <div class="dashboard-container container">
+      <!-- Toggle Button -->
+      <div class="logout-button">
+        <i class="fa fa-power-off" aria-hidden="true"></i>
+      </div>
+      <div class="toggle-button">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </div>
       <aside>
         <a href="./index.html">
           <div class="logo">TaskMaster</div>
@@ -27,7 +34,7 @@
           </div>
           <h3>
             Hi, <span id="greetings"></span> <br />
-            <span id="loggedInUserName"></span>!
+            <span id="loggedInUserName"></span>
           </h3>
         </div>
         <div class="sidebar-items">
@@ -66,22 +73,18 @@
               <div class="task-list-controls-buttons">
                 <div class="priority-div-section">
                   <button type="button" id="filter-by-priority">
-                    Filter by Priority
+                    Priority
                   </button>
                 </div>
                 <div class="status-div-section">
-                  <button type="button" id="filter-by-status">
-                    Filter by Status
-                  </button>
+                  <button type="button" id="filter-by-status">Status</button>
                 </div>
                 <div class="dueDate-div-section">
-                  <button type="button" id="filter-by-dueDate">
-                    Filter by Due Date
-                  </button>
+                  <button type="button" id="filter-by-dueDate">Due Date</button>
                 </div>
                 <div class="completed-div-section">
                   <button type="button" id="show-completed-tasks">
-                    Show Completed Tasks
+                    Completed
                   </button>
                 </div>
               </div>
@@ -180,7 +183,7 @@
         </div>
         <footer>
           <p>
-            Designed by Witty Umosung @ November 2024 - <span id="year"></span>
+            Designed by Witty Umosung @ November 2023 - <span id="year"></span>
           </p>
         </footer>
       </main>
