changed: /login _ /tasks-get _ dashboard-elements

--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TaskMaster</title>
+    <title>Dashboard - TaskMaster</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -99,6 +99,13 @@
                     <i class="fas fa-search"></i>
                   </div>
                 </div>
+              </div>
+              <div class="task-stats">
+                <p>Total Tasks: <span id="total-tasks">0</span></p>
+                <p>Completed: <span id="completed-tasks">0</span></p>
+                <p>Pending: <span id="pending-tasks">0</span></p>
+                <p>In Progress: <span id="in-progress-tasks">0</span></p>
+                <p>Overdue: <span id="overdue-tasks">0</span></p>
               </div>
               <div class="task-list-container">
                 <!-- Task list will be dynamically generated here -->
